--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/main.css">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8K3SZNbMysGr0hEuEw-F6A99CcnoyjTc&libraries=places"></script>
   <script src="assets/main.js" defer></script>
 </head>
 <body>
